FIx layout issues

--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -33,32 +33,14 @@ body {
   background-color: var(--background);
   color: white;
   color: var(--font);
-  height: 100vh;
-  margin: 0px;
-  width: 100vh;
-  word-wrap: break-word;
-}
-
-#site-wrapper {
-  background-color: #444444;
-  background-color: var(--background);
-  margin: 0px; 
-  padding: 0px; 
-}
-
-#content-wrapper {
-  margin-bottom: 40px;
-  margin-left: auto;
-  margin-right: auto;
+  margin: auto;
   margin-top: 10px;
+  margin-bottom: 40px;
   max-width: 480px;
   padding-left: 20px;
   padding-right: 20px;
+  word-wrap: break-word;
 }
-
-#tertiary-wrapper {
-  min-width: 100%;
-} 
 
 html {
   #wordmark {
@@ -75,8 +57,7 @@ a {
   text-underline-offset: 0.35em;
   text-underline-position: below;
 
-  &:hover,
-  &:active {
+  &:hover {
     background-color: rgba(124, 58, 237, 0.5);
     text-decoration-style: dotted;
     text-underline-offset: inherit;
@@ -93,7 +74,7 @@ article {
 }
 
 blockquote {
-  border-left: 0.125em solid #743ee4;
+  border-left: 0.125em solid #7c3aed;
   margin: 20px;
   padding: 5px 0px 5px 20px;
 
@@ -124,7 +105,7 @@ footer {
 }
 
 h1 {
-  color: #743ee4;
+  color: #7c3aed;
 }
 
 h1,
@@ -291,7 +272,7 @@ p {
 }
 
 #thanks h2 {
-  color: #743ee4;
+  color: #7c3aed;
 }
 
 #wordmark-wrapper {
